  NEW FEATURES
    
  IMPROVEMENTS

    HADOOP-10148. backport hadoop-10107 to branch-0.23 (Chen He via jeagles)

    HADOOP-10164. Allow UGI to login with a known Subject (bobby)

  OPTIMIZATIONS
    
  BUG FIXES

    HADOOP-10081. Client.setupIOStreams can leak socket resources on exception
    or error (Tsuyoshi OZAWA via jlowe)

    HADOOP-10146. Workaround JDK7 Process fd close bug (daryn)

Release 0.23.10 - 2013-12-09

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9686. Easy access to final parameters in Configuration (Jason Lowe
    via jeagles)

    HADOOP-8704. add request logging to jetty/httpserver (jeagles)

  OPTIMIZATIONS

    HADOOP-9748. Reduce blocking on UGI.ensureInitialized (daryn)

    HADOOP-9476. Some test cases in TestUserGroupInformation fail if ran after
    testSetLoginUser. (Robert Parker via kihwal)

    HADOOP-9956. RPC listener inefficiently assigns connections to readers (daryn)

    HADOOP-9955. RPC idle connection closing is extremely inefficient (daryn)

  BUG FIXES

    HADOOP-9757. Har metadata cache can grow without limit (Cristina Abad via daryn)

    HADOOP-10091. Job with a har archive as input fails on 0.23 (Jason Dere
    and Jason Lowe via jlowe)

    HADOOP-10129. Distcp may succeed when it fails (daryn)

Release 0.23.9 - 2013-07-08

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9581. hadoop --config non-existent directory should result in error
    (Ashwin Shankar via jlowe)

    HADOOP-9582. Non-existent file to "hadoop fs -conf" doesn't throw error
    (Ashwin Shankar via jlowe)
    
Release 0.23.8 - 2013-06-05
  
  INCOMPATIBLE CHANGES
  
  NEW FEATURES
  
  IMPROVEMENTS
  
  OPTIMIZATIONS
 
  BUG FIXES

    HADOOP-9222. Cover package with org.apache.hadoop.io.lz4 unit tests (Vadim 
    Bondarev via jlowe)

    HADOOP-9233. Cover package org.apache.hadoop.io.compress.zlib with unit
    tests (Vadim Bondarev via jlowe)
